  This version makes that behavior optional, as well as also disallowing
  all file access to dotfiles when they are hidden.

- Modified how emulated or "soft" chroot mode is enabled.  Previously it
  was enabled by setting the first character of $CHROOT to "e".  Now it
  is enabled by setting $SOFTCHROOT and not setting $CHROOT.
-------------------------------------------------------------------------------
Changes in version 1.07

- Fixed a bug in handling listing unreadable directory entries that
  would cause listings to be prematurely terminated immediately before
  such an entry.
-------------------------------------------------------------------------------
Changes in version 1.06

- Fixed a one-off bug in doing pattern listings that caused all the
  resulting filenames to be prefixed with a '/'.

- Fixed some portability problems.
-------------------------------------------------------------------------------
Changes in version 1.05

- Rewrote all file handling operations to enable "emulated" chroot
  behavior.  There are now three modes of operation:
  1. Normal:  CWD appears as $HOME at login.
  2. Hard chroot:  CWD appears as / at login, and is enforced with a chroot.
  3. Emulated chroot:  CWD appears as / at login, with no chroot.
  In all of the cases, there is no chdir done after the server starts.
  This change was done to permit symlinks outside of $HOME.

- Improved the run files and the conf tools to run envdir on each
  connection rather than before tcpserver starts.  This allows the
  configuration variables to be modified without restarting the service.

- Added configuration for logging of responses, and made logging of
  requests optional.  You must now set $LOGREQUESTS if you want to log
  requests and $LOGRESPONSES if you want to log responses.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------